--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,6 +22,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        mkdir data
+        mv .github/workflow/settings.json data/settings.json
+        mv .github/workflow/sessionPub.pem data/sessionPub.pem
+        mv .github/workflow/sessionPriv.pem data/sessionPriv.pem 
     - name: Start jimiCore
       run: |
         python jimi_core.py
