--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,9 +23,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         mkdir data
-        mv .github/workflow/settings.json data/settings.json
-        mv .github/workflow/sessionPub.pem data/sessionPub.pem
-        mv .github/workflow/sessionPriv.pem data/sessionPriv.pem 
+        wget https://raw.githubusercontent.com/z1pti3/jimi/v1.4/.github/workflows/settings.json data/settings.json
+        wget https://raw.githubusercontent.com/z1pti3/jimi/v1.4/.github/workflows/sessionPub.pem data/sessionPub.pem
+        wget https://raw.githubusercontent.com/z1pti3/jimi/v1.4/.github/workflows/sessionPriv.pem data/sessionPriv.pem 
     - name: Start jimiCore
       run: |
         python jimi_core.py
