--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,4 +1,4 @@
-name: Python application
+name: jimi_core
 
 on:
   push:
@@ -11,9 +11,13 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        mongodb-version: [4.0, 4.2]
+        mongodb-version: [4.2]
     steps:
     - uses: actions/checkout@v2
+    - name: Start MongoDB
+      uses: supercharge/mongodb-github-action@1.3.0
+      with:
+        mongodb-version: ${{ matrix.mongodb-version }}
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
