--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -35,6 +35,7 @@ jobs:
     - name: Start jimi
       run: |
         python jimi_core.py &
+        sleep 5s
         python jimi_web.py &
     - name: Tests
       run: |
