--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,7 +37,9 @@ jobs:
         python jimi_core.py &
         sleep 5s
         python jimi_web.py &
+        disown -a
     - name: Tests
       run: |
+        ps -aux
         curl http://127.0.0.1:5000/
         curl http://127.0.0.1:5002/
