--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -34,6 +34,7 @@ jobs:
         mkdir plugins
     - name: Start jimi
       run: |
+        script /dev/null
         screen -S jimi_core python jimi_core.py  
         sleep 3s
         screen -S jimi_web python jimi_web.py
