--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.py linguist-detectable
 /web/build/static/javascript/* linguist-detectable
 /web/build/static/css/* linguist-detectable
+/web/build/*.html linguist-detectable
